Enable java 23 on CI workflow
AMQP broker accesses subject and needs to allow security manager