@@ -174,5 +174,22 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>allow-security-manager</id>
+      <activation>
+        <jdk>[23, )</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Djava.security.manager=allow</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
